# geofast

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
geofast/: __init__.py  spray_line_generator.py  spray_optimizer.py
rust/: .gitignore  Cargo.toml  README.md
rust/src/: bind.rs  decompose.rs  field.rs  geom.rs  ingest.rs  lib.rs  params.rs  plan.rs  scanline.rs  simulate.rs
tests/: test_parity.py  test_spray_rust.py
tests/fixtures/: field_irregular.geojson  field_irregular.kml
